Changed Address classes to handle Exceptions